--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# 5 day Weather Forcast page
+# 5 day Weather Forecast page
 
 ## Showing people my developer skills through HTML, CSS, and JavaScript.
 
@@ -61,4 +61,4 @@ One of my biggest references is Google just answering questions
 
 ## Link to deployed GitHub site
 
-
+https://forbes85.github.io/5-day-weather-forcast/
